--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .fade-enter {
     opacity: 0;
-    transform: scale(0.9);
+    transform: translateX(100%) scale(1.3);
 }
 
 .fade-enter-active {
     opacity: 1;
-    transform: scale(1);
+    transform: translateX(0) scale(1);
     transition: opacity 300ms, transform 300ms;
 }
 
