--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,37 @@
 html {
   overflow-x: hidden;
 }
+
+.content {
+  width: 334px;
+  height: 216px;
+  /* background: #f0f0f0; */
+  border-radius: 3px;
+  overflow-y: auto;
+  padding: 0;
+  margin-left: 25px;
+  margin-top: 5px;
+  overflow-x: hidden;
+  background-color: black;
+}
+
+.content::-webkit-scrollbar {
+  width: 5px;
+}
+
+.content::-webkit-scrollbar-thumb {
+  background-color: #d3d3d3;
+  border-radius: 10px;
+}
+
+.content::-webkit-scrollbar-track {
+  background-color: #5f5f5f;
+}
+
+.wrapper {
+  /* padding: 10px; */
+  width: 668px;
+  /* height: 432px; */
+  transform: scale(.65);
+  transform-origin: top left;
+}
