--- a/src/index.css
+++ b/src/index.css
@@ -7,22 +7,40 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --scrollbar-thumb-color: #891b1b;
+  --scrollbar-track-color: #5f5f5f;
+  --scrollbar-size: 10px;
 }
 
 html {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+}
+
+html::-webkit-scrollbar,
+html::-webkit-scrollbar:horizontal {
+  width: var(--scrollbar-size);
+}
+
+html::-webkit-scrollbar:horizontal {
+  height: var(--scrollbar-size);
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-thumb-color);
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-track {
+  background-color: var(--scrollbar-track-color);
+  border-radius: 10px;
 }
 
 .content {
   width: 334px;
   height: 216px;
-  /* background: #f0f0f0; */
   border-radius: 3px;
   overflow-y: auto;
-  padding: 0;
-  margin-left: 25px;
-  margin-top: 5px;
-  overflow-x: hidden;
   background-color: black;
 }
 
@@ -41,7 +59,7 @@ html {
 
 .wrapper {
   /* padding: 10px; */
-  width: 668px;
+  /* width: 668px; */
   /* height: 432px; */
   transform: scale(.65);
   transform-origin: top left;
