--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,22 @@
 .fade-enter {
     opacity: 0;
-    transform: translateX(100%) scale(1.3);
+    transform: translateX(100%);
 }
 
 .fade-enter-active {
     opacity: 1;
-    transform: translateX(0) scale(1);
+    transform: translateX(0);
     transition: opacity 300ms, transform 300ms;
 }
 
 .fade-exit {
     opacity: 1;
-    transform: scale(1);
+    transform: scale(1) translateX(0);
 }
 
 .fade-exit-active {
     opacity: 0;
-    transform: scale(0.9);
+    transform: scale(0.9) translateX(-100%);
     transition: opacity 300ms, transform 300ms;
 }
 
