--- a/src/index.css
+++ b/src/index.css
@@ -26,12 +26,14 @@ html::-webkit-scrollbar:horizontal {
   height: var(--scrollbar-size);
 }
 
-html::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb,
+.content::-webkit-scrollbar-thumb {
   background-color: var(--scrollbar-thumb-color);
   border-radius: 10px;
 }
 
-html::-webkit-scrollbar-track {
+html::-webkit-scrollbar-track,
+.content::-webkit-scrollbar-track {
   background-color: var(--scrollbar-track-color);
   border-radius: 10px;
 }
@@ -42,8 +44,9 @@ html::-webkit-scrollbar-track {
   border-radius: 3px;
   overflow-y: auto;
   background-color: black;
-  margin-top: 28px;
-  margin-left: -30px;
+  position: relative;
+  left: 9px;
+  top: -15px;
 }
 
 .content::-webkit-scrollbar {
@@ -54,19 +57,31 @@ html::-webkit-scrollbar-track {
   height: 5px;
 }
 
-.content::-webkit-scrollbar-thumb {
-  background-color: #d3d3d3;
-  border-radius: 10px;
-}
-
-.content::-webkit-scrollbar-track {
-  background-color: #5f5f5f;
-}
-
 .wrapper {
-  /* padding: 10px; */
-  /* width: 668px; */
-  /* height: 432px; */
   transform: scale(.65);
   transform-origin: top left;
+}
+
+.pulse {
+  width: .5rem;
+  height: .5rem;
+  animation: pulse 2s infinite;
+  border-radius: 50%;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 var(--scrollbar-thumb-color);
+  }
+
+  50% {
+    transform: scale(1.1);
+    box-shadow: 0 0 0 .5rem rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 var(--scrollbar-thumb-color);
+  }
 }
